--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="logo-header" href="./index.html">Web<span class="part-header">Studio</span></a>
     <ul class="nav-list">
         <li class="nav-item">
-            <a class="nav-link studio" href="">Studio</a>
+            <a class="nav-link studio" href="./index.html">Studio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="">Portfolio</a>
@@ -33,7 +33,7 @@
 <address class="header-address">
     <ul class="address-list">
         <li class="address-items">
-            <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="email" href="./index.html">info@devstudio.com</a>
         </li>
         <li>
             <a class="telefon" href="tel:+110001111111">+11 (000) 111-11-11</a>
