--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     
     <header class="page-heder">
 <nav class="header-nav">
-    <a class="logo-header" href="./index.html">Web<span class="part-header">Studio</span></a>
+    <a class="logo header-logo" href="./index.html">Web<span class="part">Studio</span></a>
     <ul class="nav-list">
         <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
+            <a class="nav-link " href="./index.html">Studio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="">Portfolio</a>
@@ -161,7 +161,7 @@
     </main>
 
     <footer class="footer-page">
-        <a class="logo-footer" href="./index.html">Web<span class="part-footer">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html">Web<span class="part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
