--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </main>
 
     <footer class="footer-page">
-        <a class="logo footer-logo" href="./index.html">Web<span class="part">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html">Web<span class="part-footer">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
